# gcapi

./: .gitignore  README.md  cspell.json  pyproject.toml
examples/: qcutils.py
qcapi/: __init__.py  _client.py  _object.py  errors.py
qcapi/_backtests/: __init__.py
qcapi/_backtests/_chart/: __init__.py
qcapi/_backtests/_orders/: __init__.py
qcapi/_compile/: __init__.py
qcapi/_live/: __init__.py  _orders.py
qcapi/models/: __init__.py  _backtest_models.py  _backtests.py  _chart.py  _orders.py
tests/: conftest.py  test_chart.py
